# echoes-of-the-ancients

./: .gitignore  Cargo.toml
assets/: sheet-credits.txt
src/: game_state.rs  input_handling.rs  items.rs  main.rs  mobs.rs  player.rs  sets.rs  setup.rs  states.rs  ui.rs
src/character/: input_handling.rs  mod.rs  movement.rs
src/items/: drop.rs  equip.rs  mod.rs  pick_up.rs  unequip.rs
src/mobs/: combat.rs  general_mob_behaviour.rs  goblin.rs  mod.rs  spawn_mobs.rs
src/mobs/combat/: attack.rs  mob_attack.rs
src/mobs/goblin/: attack.rs  goblin_attack.rs  mod.rs  spawn_goblin.rs
src/player/: attack.rs  input_handling.rs  melee_attack.rs  mod.rs  movement.rs  spawn_player.rs
src/ui/: character_menu.rs  inventory.rs
