[package]
name = "echoes-of-the-ancients"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_xpbd_2d = "0.4"
bevy_embedded_assets = "0.10.2"
rand = "0.8"
bevy_egui = "0.27"
bevy_framepace = "0.16"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
